# washer_detergent

./: .gitignore  payload.h
firmware/: CMakeLists.txt  partitions.csv
firmware/main/: CMakeLists.txt  encryption.c  encryption.h  generate_key_h.sh  main.c  pump.c  pump.h  server.c  server.h  sntp.c  sntp.h  sockets.c  sockets.h  storage.c  storage.h  wifi.c  wifi.h
firmware/wifi/: CMakeLists.txt
plugin/: CMakeLists.txt  client.cpp
